--- a/src/BlogBundle/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/BlogBundle/BlogBundle/Resources/views/Blog/show.html.twig
@@ -4,14 +4,26 @@
 {% block title %}{{ blog.title }}{% endblock %}
 
 {% block body %}
-    <article class="w3-card-4">
-        <header>
-            <div class="date">Posted at :<time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
+    <article class="w3-card" >
+        <header >
+            <div class="date"><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
             <h2>{{ blog.title }}</h2>
         </header>
-        <img src="{{ asset(['images/', blog.image]|join) }}" alt="{{ blog.title }} image not found" style="width:150px" class/>
+        <img src="{{ asset(['images/', blog.image]|join) }}" alt="{{ blog.title }} image not found" style="max-width:250px; float:left" class/>
         <div>
             <p>{{ blog.blog }}</p>
         </div>
     </article>
+    
+     <section class="comments" id="comments">
+        <section class="previous-comments">
+            
+            <h3>Comments</h3>
+            {% include 'BlogBundleBlogBundle:Comment:index.html.twig' with { 'comments': comments } %}
+            
+            <h3>Add Comment</h3>
+            {{ render (controller('BlogBundleBlogBundle:Comment:new', { 'blog_id': blog.id })) }}
+    
+         </section>
+    </section>
 {% endblock %}
