--- a/src/BlogBundle/BlogBundle/Resources/views/MyPage/index.html.twig
+++ b/src/BlogBundle/BlogBundle/Resources/views/MyPage/index.html.twig
@@ -2,5 +2,26 @@
 {% extends 'BlogBundleBlogBundle::layout.html.twig' %}
 
 {% block body %}
-    Blog Accueil
+    {% for blog in blogs %}
+        <article class="w3-card">
+            <div class="date"><b>Posted at : </b><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
+            <header>
+                <h2><a href="{{ path('blog_bundle_blog_show', { 'id': blog.id }) }}">{{ blog.title }}</a></h2>
+            </header>
+
+            <img src="{{ asset(['images/', blog.image]|join) }}" style="max-width:250px;max-height: 200px; float:left; margin-right:15px; margin-left: 15px"/>
+            <div class="snippet">
+                <p>{{ blog.blog(500) }}</p>
+                <p class="continue"><a href="{{ path('blog_bundle_blog_show', { 'id': blog.id }) }}">Continue reading...</a></p>
+            </div>
+
+            <footer class="meta">
+                <p>Comments:   <a href="{{ path('blog_bundle_blog_show', { 'id': blog.id }) }}#comments">{{ blog.comments|length }}</a></p>
+                <p>Posted by <span class="highlight">{{blog.author}}</span> at {{ blog.created|date('h:iA') }}</p>
+                <p>Tags: <span class="highlight">{{ blog.tags }}</span></p>
+            </footer>
+        </article>
+    {% else %}
+        <p>There are no blog entries for symblog</p>
+    {% endfor %}
 {% endblock %}
