add of factice data for testing

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
                 </div>
 
                 <hgroup>
-                    <h2>{% block blog_title %}<a href="#">blogSymfony</a>{% endblock %}</h2>
+                    <h2>{% block blog_title %}<a href="#">Amancio</a>{% endblock %}</h2>
                     <h3>{% block blog_tagline %}<a href="#">Bienvenue sur mon blog</a>{% endblock %}</h3>
                 </hgroup>
             </header>
