--- a/src/BlogBundle/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/BlogBundle/BlogBundle/Resources/views/Blog/show.html.twig
@@ -9,7 +9,7 @@
             <div class="date"><time datetime="{{ blog.created|date('c') }}">{{ blog.created|date('l, F j, Y') }}</time></div>
             <h2>{{ blog.title }}</h2>
         </header>
-        <img src="{{ asset(['images/', blog.image]|join) }}" alt="{{ blog.title }} image not found" style="max-width:250px; float:left" class/>
+        <img src="{{ asset(['images/', blog.image]|join) }}" alt="{{ blog.title }} image not found" style="max-width:250px;max-height: 200px; float:left; margin-right:15px; margin-left: 15px" class/>
         <div>
             <p>{{ blog.blog }}</p>
         </div>
