add admin sonata framework for post admin

--- a/src/BlogBundle/BlogBundle/Resources/views/MyPage/index.html.twig
+++ b/src/BlogBundle/BlogBundle/Resources/views/MyPage/index.html.twig
@@ -22,6 +22,6 @@
             </footer>
         </article>
     {% else %}
-        <p>There are no blog entries for symblog</p>
+        <p>aucun enregistrement</p>
     {% endfor %}
 {% endblock %}
