--- a/src/BlogBundle/BlogBundle/Resources/views/MyPage/sidebar.html.twig
+++ b/src/BlogBundle/BlogBundle/Resources/views/MyPage/sidebar.html.twig
@@ -1,14 +1,15 @@
 {# src/BlogBundle/BlogBundle/Resources/views/Page/sidebar.html.twig #}
 
 <section class="section">
-    <header>
-        <h3>Tag Cloud</h3>
-    </header>
-    <p class="tags">
-        {% for tag, weight in tags %}
-            <span class="weight-{{ weight }}">{{ tag }}</span>
-        {% else %}
-            <p>There are no tags</p>
-        {% endfor %}
-    </p>
+    <h1>Login</h1>
+
+<form action="{{ path('login') }}" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="_username" value="" />
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="_password" />
+    <br><br>
+    <button class="btn btn-primary" type="submit">login</button>
+</form>
 </section>
